# smolfs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-cli.yml  publish-node.yml  publish-python.yml
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/node/test/: package-smoke.js  sdk-types.ts  sdk.test.js  tsconfig.json
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/smolfs/: __init__.py  cli.py
bindings/python/src/: lib.rs
crates/smolfs-cli/: Cargo.toml
crates/smolfs-cli/src/: main.rs
crates/smolfs-core/: Cargo.toml
crates/smolfs-core/src/: config.rs  error.rs  lib.rs  models.rs  paths.rs  registry.rs  store.rs  time.rs  validation.rs
crates/smolfs-juicefs/: Cargo.toml
crates/smolfs-juicefs/src/: command.rs  doctor.rs  juicefs.rs  lib.rs  service.rs
crates/smolfs-juicefs/tests/: minio_integration.rs
scripts/: install.sh
