[workspace]
members = [
    "crates/smolfs-cli",
    "crates/smolfs-core",
    "crates/smolfs-juicefs",
    "bindings/node",
    "bindings/python",
]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/celestoai/smolfs"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
fs2 = "0.4"
napi = { version = "2.16.17", features = ["napi4"] }
napi-build = "2.2.3"
napi-derive = "2.16.13"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smolfs-core = { path = "crates/smolfs-core" }
smolfs-juicefs = { path = "crates/smolfs-juicefs" }
tempfile = "3.14"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
toml = "0.9"
