[package]
name = "smolfs-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
smolfs-core.workspace = true
smolfs-juicefs.workspace = true

[build-dependencies]
napi-build.workspace = true
