[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "smolfs"
version = "0.1.0"
description = "Python bindings for SmolFS"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Celesto AI" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
module-name = "smolfs._native"
python-source = "python"
features = ["pyo3/extension-module"]

