[build-system]
requires = ["maturin==1.14.1"]
build-backend = "maturin"

[project]
name = "smolfs"
version = "0.1.1"
description = "Durable workspace folders for Python agents"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Celesto AI" }]
keywords = ["agents", "filesystem", "object-storage", "persistent-workspaces", "smolfs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/CelestoAI/smolfs"
Repository = "https://github.com/CelestoAI/smolfs"
Issues = "https://github.com/CelestoAI/smolfs/issues"

[tool.maturin]
module-name = "smolfs._native"
python-source = "python"
features = ["pyo3/extension-module"]
