[package]
name = "smolfs-cli"
description = "Command-line interface for SmolFS agent volumes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "smolfs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
smolfs-core.workspace = true
smolfs-juicefs.workspace = true
