[package]
name = "smolfs-core"
description = "Core models, registry, config, and errors for SmolFS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dirs.workspace = true
fs2.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
