[package]
name = "smolfs-juicefs"
description = "JuiceFS-backed volume lifecycle for SmolFS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
smolfs-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
